--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "webpack --mode production",
-        "dev": "webpack serve"
+        "dev": "webpack serve",
+        "dev:api": "json-server src/db.json"
     },
     "repository": {
         "type": "git",
@@ -25,6 +26,7 @@
         "@babel/preset-react": "^7.13.13",
         "babel-loader": "^8.2.2",
         "html-webpack-plugin": "^5.3.1",
+        "json-server": "^0.16.3",
         "webpack": "^5.37.1",
         "webpack-cli": "^4.7.0",
         "webpack-dev-server": "^3.11.2"
