--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "webpack --mode production",
-        "dev": "webpack serve"
+        "dev": "webpack serve --mode development"
     },
     "repository": {
         "type": "git",
@@ -34,6 +34,7 @@
         "graphql": "^15.5.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-helmet": "^6.1.0",
         "react-icons": "^4.2.0",
         "react-router-dom": "^5.2.0",
         "styled-components": "^5.3.0"
