--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
         "prop-types": "^15.7.2",
         "webpack": "^5.37.1",
         "webpack-cli": "^4.7.0",
-        "webpack-dev-server": "^3.11.2"
+        "webpack-dev-server": "^3.11.2",
+        "webpack-pwa-manifest": "^4.3.0"
     },
     "dependencies": {
         "@apollo/client": "^3.3.19",
