--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "webpack --mode production",
-        "dev": "webpack serve --mode development"
+        "dev": "webpack serve --mode development",
+        "serve:dev": "webpack --mode development && npx serve dist -s"
     },
     "repository": {
         "type": "git",
@@ -29,7 +30,8 @@
         "webpack": "^5.37.1",
         "webpack-cli": "^4.7.0",
         "webpack-dev-server": "^3.11.2",
-        "webpack-pwa-manifest": "^4.3.0"
+        "webpack-pwa-manifest": "^4.3.0",
+        "workbox-webpack-plugin": "^6.1.5"
     },
     "dependencies": {
         "@apollo/client": "^3.3.19",
